<?xml version="1.0"?>
<package format="3">
  <name>image_conversion</name>
  <version>0.0.1</version>
  <description>The image_conversion package</description>
  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
</package>
